Fix styling for start session quiz and graph carrot on mobile screens

--- a/widgets/graph-by-target/edx/default/dev/graph-by-targets-style.css
+++ b/widgets/graph-by-target/edx/default/dev/graph-by-targets-style.css
@@ -249,7 +249,7 @@
 .next-target-indicator{
   position: absolute;
   top: 0px;
-  left: -35px;
+  left: -38px;
   opacity: 1;
   width: 35px;
   height: 35px;
